--- a/src/components/layout/AIChatbotPanel.module.css
+++ b/src/components/layout/AIChatbotPanel.module.css
@@ -34,7 +34,7 @@
 /* Tab attached to left edge of panel */
 .sideTab {
     position: absolute;
-    top: 300px;
+    top: 440px;
     padding: 16px 10px;
     display: flex;
     flex-direction: column;
